feat: add settings page with language switching
- Add settings page with language selector (English/Russian)
- Add settings tab to mobile navigation bar
- Fix language switching persistence issue (respect manual selection over Telegram locale)
- Extract Telegram locale logic into useTelegramLocale hook for cleaner code
- Add translations for settings page in English and Russian
- Update MobileLayout and PersistentLayout to handle settings route

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,6 +1,48 @@
 {
-  "i18n": {
-    "header": "Application supports i18n",
-    "footer": "You can select a different language from the dropdown menu."
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "tryAgain": "Try again"
+  },
+  "navigation": {
+    "home": "Home",
+    "convert": "Convert",
+    "inventory": "Inventory",
+    "settings": "Settings"
+  },
+  "ticket": {
+    "price": "PRICE",
+    "quality": "QUALITY"
+  },
+  "ticketFeed": {
+    "previousTicket": "Previous ticket",
+    "nextTicket": "Next ticket"
+  },
+  "websocket": {
+    "connected": "WebSocket Connected",
+    "disconnected": "WebSocket Disconnected",
+    "error": "Error",
+    "lastMessage": "Last"
+  },
+  "user": {
+    "welcome": "Welcome to Bite Bunny!",
+    "loadingData": "Loading user data...",
+    "coins": "Coins",
+    "copyRawData": "Copy raw data"
+  },
+  "test": {
+    "title": "Test Page",
+    "description": "This is a temporary test page for development purposes."
+  },
+  "error": {
+    "title": "An unhandled error occurred!",
+    "tryAgain": "Try again"
+  },
+  "app": {
+    "logoAlt": "Bite Bunny Logo"
+  },
+  "settings": {
+    "title": "Settings",
+    "language": "Language"
   }
 }
