feat: added 404 page

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -44,5 +44,10 @@
   "settings": {
     "title": "Настройки",
     "language": "Язык"
+  },
+  "notFound": {
+    "title": "Страница не найдена",
+    "message": "Извините, мы не смогли найти страницу, которую вы ищете",
+    "goHome": "Вернуться на главную"
   }
 }
