--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -44,5 +44,10 @@
   "settings": {
     "title": "Settings",
     "language": "Language"
+  },
+  "notFound": {
+    "title": "Page not found",
+    "message": "Sorry, we couldn't find the page you are looking for",
+    "goHome": "Go to Home"
   }
 }
