--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -45,6 +45,9 @@
     "title": "Настройки",
     "language": "Язык"
   },
+  "inventory": {
+    "title": "Билеты"
+  },
   "notFound": {
     "title": "Страница не найдена",
     "message": "Извините, мы не смогли найти страницу, которую вы ищете",
