--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -52,5 +52,11 @@
     "title": "Страница не найдена",
     "message": "Извините, мы не смогли найти страницу, которую вы ищете",
     "goHome": "Вернуться на главную"
+  },
+  "dailyCrate": {
+    "title": "Ежедневный Сундук",
+    "description": "Получите ежедневную награду и удивительные призы!",
+    "claimButton": "Забрать Сейчас",
+    "crateAlt": "Ежедневный сундук"
   }
 }
