feat: added credits page and page component

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -58,5 +58,12 @@
     "description": "Claim your daily reward and get amazing prizes!",
     "claimButton": "Claim Now",
     "crateAlt": "Daily crate"
+  },
+  "credits": {
+    "title": "Coins",
+    "description": "Purchase coins using Telegram Stars to unlock amazing features!",
+    "purchaseInfo": "Pay {stars} Stars to receive {credits} Coins",
+    "creditIconAlt": "Credit coin icon",
+    "purchaseCredits": "Purchase Coins"
   }
 }
